Fix a css rule (my bad), minor whitespace changes

--- a/css/content.css
+++ b/css/content.css
@@ -176,7 +176,7 @@ a.button-link {
 	flex-grow: 1;
 }
 
-.list-with-image > li {
+.list-with-image li {
 	margin-bottom: 1em;
 }
 
